# code-cohesion

./: Cargo.toml  README.md
docs/: self-analysis-2026-06-27.md  self-analysis-after-heuristics-split.md
src/: code_reader.rs  language.rs  llm.rs  main.rs  scanner.rs
src/llm/: agent.rs  client.rs  tools.rs  types.rs
src/scanner/: ast.rs  extractors.rs  heuristics.rs  role_mapper.rs  scorer.rs  types.rs
